--- a/src/components/Work/style.css
+++ b/src/components/Work/style.css
@@ -4,66 +4,75 @@
 }
 
 .project-container {
+  max-width: 875px;
   width: 100%;
-  border-bottom: 2px solid black;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.project-container .project {
+.project {
   display: inline-block;
-  width: 360px;
+
 }
 
-.project-container img {
+.project img {
   width: 290px;
-  float: left;
-  margin-left: 5%;
   border: 1px solid grey;
 }
 
-.project-container img:hover {
+.project img:hover {
   opacity: 0.3;
   filter: alpha(opacity=30);
 }
 
-.project-container p {
+.project p {
   width: 290px;
   height: 260px;
   padding: 0 0 0 0px;
-  margin-left: 5%;
-  float: left;
   text-align: left;
 }
 
-.project-container a {
+.project a {
   font-size: 25px;
 }
 
-.project-container h5 {
+.project h5 {
   padding-top: 15px;
 }
 
 @media(max-width: 400px) {
-  .project-container {
+  .work {
+    display: block;
+    text-align: center;
     width: 115%;
+  }
+
+  .project {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 350px;
+  }
+
+  .project-container {
     margin: 0 auto;
   }
   .project-container img {
   width: 290px;
-  float: left;
   border: 1px solid grey;
+  }
+
+  .project-container img:hover {
+    opacity: 0.3;
+    filter: alpha(opacity=30);
 }
 
-.project-container img:hover {
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-}
-
-.project-container p {
-  width: 290px;
-  height: 260px;
-  padding: 0 0 0 0px;
-  float: left;
-  text-align: left;
-  overflow: scroll;
+  .project-container p {
+    width: 100%;
+    height: 260px;
+    float: none;
+    text-align: center;
+    overflow: visible;
 }
 }
